# CoolSteal

./: .gitignore  CMakeLists.txt  CoolStealServerApp.cpp  CoolStealServerApp.h  PlagiasmChecker.cpp  PlagiasmChecker.h  README.md  Router.cpp  Router.h  main.cpp  soty_eto_test.cpp
DataBase/: DBManager.cpp  DBManager.h
Normalizator/: CppNormaizeAlgorithm.cpp  CppNormaizeAlgorithm.h  Normalizator.cpp  Normalizator.h  NormalizatorInterface.h  NormalizeAlgorhitm.h
docs/: algorithm.md  specification.md
include/Poco/: Any.h  Random.h
lexUtils/: CKeyWords.cpp  CKeyWords.h  LexerCpp.cpp  LexerCpp.h  LexerInterface.h  OperatorSet.cpp  OperatorSet.h  TokenSet.h  VariableSet.cpp  VariableSet.h  lexer_check.cpp
methods/: CheckLibary.cpp  CheckLibary.h  CheckLibaryInterface.h  Checker.h  LevenstainChecker.cpp  LevenstainChecker.h  OpSequencePlagiasmChecker.cpp  OpSequencePlagiasmChecker.h  OperatorPlagiasmChecker.cpp  OperatorPlagiasmChecker.h  PlagiasmCheckerInterface.h  ShingleChecker.cpp  ShingleChecker.h
models/: DBCommand.cpp  DBCommand.h  PlagiasmResult.cpp  PlagiasmResult.h  Program.cpp  Program.h  Token.cpp  Token.h  TokenType.h
poco-1.7.5/: MANIFEST  VERSION  config.build  config.make
tests/: LevenstainTests.cpp  OpSequencePlagiasmTests.cpp  OperatorPlagiasmTests.cpp  lexerTests.cpp  normalizerTests.cpp  shingleTests.cpp
